Find the record on Cloudflare an get the ip

--- a/template.env
+++ b/template.env
@@ -1,10 +1,29 @@
 # Rename this file to '.env'
 
-CF_EMAIL=""         # The email used to login 'https://dash.cloudflare.com'
-AUTH_METHOD=""      # Set to "global" for Global API Key or "token" for Scoped API Token
-API_KEY=""          # Your API Token or Global API Key
-ZONE_IDENTIFIER=""  # Can be found in the "Overview" tab of your domain
-RECORD_NAME=""      # Which record you want to be synced
-TTL=300             # Set the DNS TTL (seconds)
-PROXY="false"       # Set the proxy to true or false
-DISCORD_URI=""      # URI for Discord WebHook "https://discordapp.com/api/webhooks/xxxxx"
+# The email used to login 'https://dash.cloudflare.com'
+CF_EMAIL=""
+
+# Set to "global" for Global API Key or "token" for Scoped API Token
+AUTH_METHOD="token"
+
+# Your API Token or Global API Key
+API_KEY=""
+
+# Can be found in the "Overview" tab of your domain
+ZONE_IDENTIFIER=""
+
+# Which record you want to be synced
+RECORD_NAME=""
+
+# Set the DNS TTL (seconds)
+TTL=300
+
+# Set the proxy to true or false
+PROXY="false"
+
+#URI for Discord WebHook "https://discordapp.com/api/webhooks/xxxxx"
+DISCORD_URI=""
+
+#UserID of your discord account for tags. Put your id like this -> <@USER_ID>
+DISCORD_USER_ID="<@>"
+
