Save Public ip charged on record for local check

--- a/template.env
+++ b/template.env
@@ -27,3 +27,5 @@ DISCORD_URI=""
 #UserID of your discord account for tags. Put your id like this -> <@USER_ID>
 DISCORD_USER_ID="<@>"
 
+#Save ip local to local update
+SAVE_LOCAL_IP="on"
